FIREBASE USER OVERHAUL
+storing basic user stats within firebase
+loading users on app start
+Fireuser object
+ alot more

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,8 @@
 
     <string name="singleplayer">"Single Player"</string>
     <string name="multiplayer">"Multiplayer"</string>
-    <string name="time_trial">"Time Trials"</string>
+    <string name="time_trial">"Time Trial"</string>
+    <string name="save_user">"Save User"</string>
     <string name="campaign">"Campaign"</string>
 
     <string name="logout">Logout</string>
