Made Singleplayer - Removed all instances of firebase - Updated User and PlayerWallet classes to properly instantiate - Updated appearance of MainMenu - Added Roboto_Bold font - Added new images for MainMenu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="time_trial">"Time Trial"</string>
     <string name="save_user">"Save User"</string>
     <string name="campaign">"Campaign"</string>
+    <string name="custom">"Custom"</string>
 
     <string name="logout">Logout</string>
     <string name="view_profile">"View Profile"</string>
