Ads and Cleanup - Gradle updated to 3.6.0 - Added banner and interstitial advertisements - Added new images for main menu buttons [to be revised] - Converted main menu mode buttons to ImageButtons - Removed LinearLayout in main menu, replaced with ConstraintLayout - Removed unneeded elements from custom game mode dialog - Removed setGameDifficulty() - Stopped calling generateProblems(), as it was creating problems twice - Changed setGamemode() to be more dynamic - changeActivity() now requires the number of problems to be specified - Added intermediary dialog between custom mode and number of problems   to ask for user's preferred difficulty - Fixed duplicate problems appearing next to one another - Fixed timed problems not using proper difficulty - Fixed timed problem generation - Fixed endGameTimed() intent extras - Timed games now count as a completed game when finished

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="custom">"Custom"</string>
 
     <string name="enter_problems">"Enter the number of problems"</string>
+    <string name="enter_problems_hint">"# of problems"</string>
     <string name="currency">"Currency:"</string>
 
     <string name="enter">"Enter"</string>
